--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="uApKSUx0NaAvbgMBlLkA9f_sh0dVWIbdZ8NqymDraSA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Công ty TNHH Thương mại và Dịch vụ DVK</title>
     <meta
